Fix build issues
- remove stats dependency
- replace parent pom with in pom config
- update to more recent Tycho