@@ -11,34 +11,50 @@
   xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
   <modelVersion>4.0.0</modelVersion>
 
-  <parent>
-    <groupId>io.takari.tycho</groupId>
-    <artifactId>tycho-support</artifactId>
-    <version>0.17.0</version>
-  </parent>
-
   <groupId>io.takari.m2e</groupId>
   <artifactId>io.takari.m2e.lifecycle</artifactId>
   <version>0.1.0-SNAPSHOT</version>
   <packaging>pom</packaging>
- 
-  <properties>
-    <tychoVersion>1.2.0</tychoVersion>
-    <eclipse-repo.url>http://download.eclipse.org/releases/photon</eclipse-repo.url>
-    <m2e-core.url>${repoHost}/content/sites/m2e.extras/m2e/1.9.0/N/LATEST</m2e-core.url>
 
-    <repositoryPathId>m2eclipse-takari-lifecycle</repositoryPathId>
+  <properties>
+    <!-- FIXME: this is not UTC (https://jira.codehaus.org/browse/MNG-5452) -->
+    <maven.build.timestamp.format>yyyyMMddHHmm</maven.build.timestamp.format>
+    <buildTimestamp>${maven.build.timestamp}</buildTimestamp>
+    <buildType>I</buildType>
+    <!-- used as part of file names and also shown in About dialog -->
+    <buildId>${buildType}${buildTimestamp}</buildId>
+    <!-- shown in About dialog -->
+    <buildLabel>${unqialifiedVersion} ${buildType}-${buildId}-${buildTimestamp}</buildLabel>
+
+    <!-- test setting -->
+    <jacoco.version>0.8.0</jacoco.version>
+    <surefire-reports-directory>${project.build.directory}/surefire-reports</surefire-reports-directory>
+    <test.vmparams></test.vmparams>
+    <coretest.vmparams></coretest.vmparams>
+    <uitest.vmparams>-Dorg.eclipse.swtbot.search.timeout=30000 -Dorg.eclipse.swtbot.screenshots.dir=target/screenshots
+      -Xmx1024m
+      -XX:MaxPermSize=150m</uitest.vmparams>
+
+    <tycho.version>1.5.1</tycho.version>
+
+    <cbi-plugins.version>1.1.3</cbi-plugins.version>
+    <cbi-plugins-repo.url>https://repo.eclipse.org/content/groups/cbi/</cbi-plugins-repo.url>
+
+    <eclipse-repo.url>https://download.eclipse.org/releases/2019-12/</eclipse-repo.url>
+    <m2e-core.url>https://download.eclipse.org/technology/m2e/releases/1.9/</m2e-core.url>
+
+    <eclipserun-repo.url>https://download.eclipse.org/releases/2019-12/</eclipserun-repo.url>
+
+    <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
+
     <incrementalbuild-workspace.version>0.20.5</incrementalbuild-workspace.version>
     <takari-builder.version>0.20.5</takari-builder.version>
-  </properties>
 
-  <repositories>
-    <repository>
-      <id>takari-stats</id>
-      <layout>p2</layout>
-      <url>http://repository.takari.io:8081/nexus/content/sites/m2e.extras/takari-stats-m2e/0.1.0/N/LATEST/</url>
-    </repository>
-  </repositories>
+    <tycho.scmUrl>scm:git:https://github.com/eclipseguru/io.takari.m2e.lifecycle.git</tycho.scmUrl>
+
+    <!-- allow to build with dirty working tree -->
+    <jgit.dirtyWorkingTree>warning</jgit.dirtyWorkingTree>
+  </properties>
 
   <modules>
     <module>io.takari.m2e.incrementalbuild.core</module>
@@ -48,6 +64,31 @@
     <module>io.takari.m2e.lifecycle.feature</module>
     <module>io.takari.m2e.lifecycle.repository</module>
   </modules>
+
+  <!-- common plug-in repos for all modules -->
+  <pluginRepositories>
+    <pluginRepository>
+      <id>cbi</id>
+      <url>${cbi-plugins-repo.url}</url>
+      <releases>
+        <enabled>true</enabled>
+      </releases>
+      <snapshots>
+        <enabled>true</enabled>
+      </snapshots>
+    </pluginRepository>
+    <pluginRepository>
+      <id>tycho</id>
+      <url>https://repo.eclipse.org/content/groups/tycho/</url>
+      <releases>
+        <enabled>false</enabled>
+      </releases>
+      <snapshots>
+        <enabled>true</enabled>
+      </snapshots>
+    </pluginRepository>
+  </pluginRepositories>
+
 
   <dependencies>
     <dependency>
@@ -61,4 +102,232 @@
       <version>${takari-builder.version}</version>
     </dependency>
   </dependencies>
+
+  <repositories>
+    <!--
+      The org.eclipse.m2e.tests.common bundle is deployed to the m2e releases repository but is not
+      part of the simultaneous release. The connectors use this bundle for testing so we need to
+      be able to pick it up.
+    -->
+    <repository>
+      <id>m2e-core</id>
+      <url>${m2e-core.url}</url>
+      <layout>p2</layout>
+    </repository>
+    <repository>
+      <id>eclipse</id>
+      <url>${eclipse-repo.url}</url>
+      <layout>p2</layout>
+    </repository>
+  </repositories>
+
+  <!-- defaults for all IDE artifacts -->
+  <build>
+    <plugins>
+      <plugin>
+        <!-- enable tycho build extension -->
+        <groupId>org.eclipse.tycho</groupId>
+        <artifactId>tycho-maven-plugin</artifactId>
+        <version>${tycho.version}</version>
+        <extensions>true</extensions>
+      </plugin>
+      <plugin>
+        <!-- target platform configuration -->
+        <groupId>org.eclipse.tycho</groupId>
+        <artifactId>target-platform-configuration</artifactId>
+        <configuration>
+          <environments>
+            <environment>
+              <os>*</os>
+              <ws>*</ws>
+              <arch>*</arch>
+            </environment>
+          </environments>
+          <targetDefinitionIncludeSource>honor</targetDefinitionIncludeSource>
+          <pomDependencies>consider</pomDependencies>
+        </configuration>
+      </plugin>
+      <plugin>
+        <!-- enable generation of source bundles -->
+        <groupId>org.eclipse.tycho</groupId>
+        <artifactId>tycho-source-plugin</artifactId>
+        <executions>
+          <execution>
+            <id>plugin-source</id>
+            <goals>
+              <goal>plugin-source</goal>
+            </goals>
+          </execution>
+        </executions>
+      </plugin>
+      <plugin>
+        <groupId>org.eclipse.tycho</groupId>
+        <artifactId>tycho-versions-plugin</artifactId>
+      </plugin>
+      <plugin>
+        <groupId>org.jacoco</groupId>
+        <artifactId>jacoco-maven-plugin</artifactId>
+      </plugin>
+    </plugins>
+
+    <pluginManagement>
+      <plugins>
+        <plugin>
+          <groupId>org.eclipse.tycho</groupId>
+          <artifactId>target-platform-configuration</artifactId>
+          <version>${tycho.version}</version>
+        </plugin>
+        <plugin>
+          <groupId>org.eclipse.tycho</groupId>
+          <artifactId>tycho-compiler-plugin</artifactId>
+          <version>${tycho.version}</version>
+          <configuration>
+            <!-- disable some warnings for all projects (they are fine in the IDE) -->
+            <compilerArgument>-warn:-deprecation,raw,unchecked,nullAnnot,null</compilerArgument>
+            <compilerArguments>
+              <!-- use compiler settings from project (if available) -->
+              <properties>${project.basedir}/.settings/org.eclipse.jdt.core.prefs</properties>
+              <verbose />
+              <inlineJSR />
+              <enableJavadoc />
+              <encoding>${project.build.sourceEncoding}</encoding>
+              <log>${project.build.directory}/@dot.xml</log>
+              <!-- <proceedOnError/> -->
+            </compilerArguments>
+            <showWarnings>true</showWarnings>
+            <excludeResources>
+              <exclude>**/package.html</exclude>
+            </excludeResources>
+          </configuration>
+        </plugin>
+        <plugin>
+          <groupId>org.eclipse.tycho</groupId>
+          <artifactId>tycho-packaging-plugin</artifactId>
+          <version>${tycho.version}</version>
+          <dependencies>
+            <dependency>
+              <groupId>org.eclipse.tycho.extras</groupId>
+              <artifactId>tycho-buildtimestamp-jgit</artifactId>
+              <version>${tycho.version}</version>
+            </dependency>
+            <dependency>
+              <groupId>org.eclipse.tycho.extras</groupId>
+              <artifactId>tycho-sourceref-jgit</artifactId>
+              <version>${tycho.version}</version>
+            </dependency>
+          </dependencies>
+          <configuration>
+            <!-- generate bundle .qualifier from Git tags/commits -->
+            <timestampProvider>jgit</timestampProvider>
+            <format>'v'yyyyMMdd-HHmm</format>
+            <additionalFileSets>
+              <fileSet>
+                <directory>${project.build.directory}</directory>
+                <includes>
+                  <include>.api_description</include>
+                  <include>about.mappings</include>
+                </includes>
+              </fileSet>
+            </additionalFileSets>
+            <!-- generate bundle Eclipse-SourceReferences header -->
+            <sourceReferences>
+              <generate>true</generate>
+            </sourceReferences>
+            <jgit.dirtyWorkingTree>${jgit.dirtyWorkingTree}</jgit.dirtyWorkingTree>
+          </configuration>
+        </plugin>
+        <plugin>
+          <groupId>org.eclipse.tycho</groupId>
+          <artifactId>tycho-source-plugin</artifactId>
+          <version>${tycho.version}</version>
+          <configuration>
+            <strictSrcIncludes>false</strictSrcIncludes>
+          </configuration>
+        </plugin>
+        <plugin>
+          <groupId>org.eclipse.tycho</groupId>
+          <artifactId>tycho-p2-plugin</artifactId>
+          <version>${tycho.version}</version>
+        </plugin>
+        <plugin>
+          <groupId>org.eclipse.tycho</groupId>
+          <artifactId>tycho-p2-director-plugin</artifactId>
+          <version>${tycho.version}</version>
+        </plugin>
+        <plugin>
+          <groupId>org.eclipse.tycho</groupId>
+          <artifactId>tycho-p2-repository-plugin</artifactId>
+          <version>${tycho.version}</version>
+        </plugin>
+        <plugin>
+          <groupId>org.eclipse.tycho</groupId>
+          <artifactId>tycho-versions-plugin</artifactId>
+          <version>${tycho.version}</version>
+        </plugin>
+        <plugin>
+          <groupId>org.eclipse.tycho.extras</groupId>
+          <artifactId>tycho-source-feature-plugin</artifactId>
+          <version>${tycho.version}</version>
+        </plugin>
+        <plugin>
+          <groupId>org.eclipse.tycho.extras</groupId>
+          <artifactId>tycho-custom-bundle-plugin</artifactId>
+          <version>${tycho.version}</version>
+        </plugin>
+        <plugin>
+          <groupId>org.eclipse.tycho.extras</groupId>
+          <artifactId>tycho-p2-extras-plugin</artifactId>
+          <version>${tycho.version}</version>
+        </plugin>
+        <plugin>
+          <groupId>org.apache.maven.plugins</groupId>
+          <artifactId>maven-resources-plugin</artifactId>
+          <version>2.6</version>
+          <executions>
+            <execution>
+              <!-- enable special processing for about.mappings file -->
+              <id>process-about.mappings</id>
+              <phase>prepare-package</phase>
+              <configuration>
+                <outputDirectory>${project.build.directory}</outputDirectory>
+                <overwrite>true</overwrite>
+                <resources>
+                  <resource>
+                    <directory>${basedir}</directory>
+                    <includes>
+                      <include>about.mappings</include>
+                    </includes>
+                    <filtering>true</filtering>
+                  </resource>
+                </resources>
+              </configuration>
+              <goals>
+                <goal>copy-resources</goal>
+              </goals>
+            </execution>
+          </executions>
+        </plugin>
+        <plugin>
+          <groupId>org.eclipse.tycho.extras</groupId>
+          <artifactId>tycho-eclipserun-plugin</artifactId>
+          <version>${tycho.version}</version>
+          <configuration>
+            <repositories>
+              <repository>
+                <id>eclipserun-repo</id>
+                <layout>p2</layout>
+                <url>${eclipserun-repo.url}</url>
+              </repository>
+            </repositories>
+          </configuration>
+        </plugin>
+        <plugin>
+          <groupId>org.jacoco</groupId>
+          <artifactId>jacoco-maven-plugin</artifactId>
+          <version>${jacoco.version}</version>
+        </plugin>
+      </plugins>
+    </pluginManagement>
+  </build>
+
 </project>
